minor loading optimizations